# Digital_You

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.background  Dockerfile.githubaction  Dockerfile.scheduled  Makefile  fly.production.toml  fly.staging.toml  fly.toml  pyproject 2.toml  pyproject.toml  requirements.txt  scheduled_update.task.yaml  supervisord.conf
backend/alembic/: README  env.py
backend/alembic/versions/: 04e1399a8efe_add_white_listed_email_domain_v2.py  171d48633315_add_n_n.py  17c50cef6e95_make_invitation_id_int.py  22df6d0d5e12_add_slack_tables.py  251c0915efba_add_n_n.py  30b7fe6977cd_fix_typo.py  39ab0114d859_add_slack_user_token_as_part_of_slack_.py  3f0821d0ca3c_make_invitation_id_int.py  3ff354bead41_add_new_slack_intergration_v2.py  40c16d96a101_fix_typo.py  4508ab899f2a_make_api_key_and_model_config_org_level.py  51e90ff88ede_remove_document_id_from_connector.py  573433e7379e_add_n_n_org_to_user.py  66cb56e13919_fix_missing_foreign_key_issue.py  787cb0d36e38_add_white_listed_email_domain.py  90c27498c973_add_user_id_to_connector_for_personal_.py  984ef0c0d759_added_joined_at_for_org.py  9b46d6e7b18b_fix_missing_foreign_key_issue.py  a700adcd95f3_make_invitation_id_int.py  a96cc00ddb6b_make_invitation_id_int.py  a9c1e2ac6640_add_unique_constraint_v2.py  (+8 more)
backend/digital_twin/: main.py  setup.cfg
backend/scripts/: localhost_google_app_credentials.json  test_setup_db.py
backend/test/: localhost.json  localhost_2.json  localhost_google_app_credentials_2.json  test_setup_db.py
(+288 files in other folders)
